# MrGeo

./: CMakeLists.txt  LICENSE  README.md  arrow_mesh.stl
cpp_src/: AnimationData.h  C_interface.cpp  CyclicSpline.h  CyclicTensor.h  Fourier.h  Mapping.h  Tensor.h  TorusTest.h  meta_for.h  util.h
python_src/: MrGeo.py.in.py  MrGeo_blender.py  MrGeo_interface.py
